Prevent horizontal overflow on the page (#78)

--- a/src/Config.Admin.WebClient/Config.Admin.WebClient/wwwroot/css/app.css
+++ b/src/Config.Admin.WebClient/Config.Admin.WebClient/wwwroot/css/app.css
@@ -1,4 +1,8 @@
-﻿.ErrorBox {
+﻿html {
+    overflow-x: hidden;
+}
+
+.ErrorBox {
     border: 1px solid #000;
     padding: 4px;
     margin: 5px !important;
